fix width on mobile qeuries

--- a/css/about.css
+++ b/css/about.css
@@ -55,6 +55,12 @@
 
   /* 550 pixels up to */
 }
+
+@media (min-width: 100px) and (max-width: 360px) {
+  .about-info {
+    width: 80%;
+  }
+}
 /* 551 pixels to 960 pixels */
 
 @media (min-width: 550px) and (max-width: 960px) {
